2013-03-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.11.1

2013-03-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add --nodeps option.

2013-03-15 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix SKIPPED management for Service and ServiceGroup.

2013-03-13 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Remove support for compat code $(...).
	* Better message when using missing dependency.

2013-02-26 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Fix bad inheritance with empty target list.

2013-02-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix deps issues with service between 2 top services.

2013-02-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.11

2013-02-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add --define/--var/-D option for run-specific variables.

2013-02-11 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Reversed actions can be configured
	* Fix parallelism regression.

2013-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.10

2013-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add vim syntax color support.

2013-02-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add 'before' option and disable WARNING.

2013-01-24 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Return key display running informations

2013-01-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add new syntax style for config file.

2013-01-17 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Add --quiet option to reduce verbosity

2012-11-09 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.9.2