@@ -1,3 +1,6 @@
+2013-04-17 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
+	* Remove escape characters when output is not a tty (ticket #3).
+
 2013-03-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Release: 0.11.1
 
